# unknown-song-finder

./: .gitignore  Auth.py  Main.py  PlaylistUpdater.py  README.md  SongFinder.py  SpotifyRecommendation.py  SpotifySongGatherer.py  pyproject.toml  setup.py  setup_env.sh
App/: MainApp.py
Others/Exceptions/: CustomExceptions.py
Others/Tests/: test_auths.py  test_playlist_updater.py  test_spotify_recommendation.py  test_spotify_song_gatherer.py
SpotifyScripts/: Auth.py  ClientCreatePlaylist.py  Main.py  PlaylistUpdater.py  SpotifyRecommendation.py  SpotifySongGatherer.py
Web/: README.md  angular.json  package-lock.json
Web/docs/: index.html  main.2d12002e57eab346.js  polyfills.098f24d9c24f6fa7.js  runtime.6862f8ecd3eb38fb.js
Web/src/app/: app.component.spec.ts
src/spotify_playlist_recommend/: main.py
src/spotify_playlist_recommend/SpotifyScripts/: ClientCreatePlaylist.py  SpotifyRecommendation.py  SpotifySongGatherer.py
tests/: test_spotify_song_gatherer.py
